--- a/cluster/examples/vm-cirros.yaml
+++ b/cluster/examples/vm-cirros.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 0
       volumes:
       - containerDisk:
-          image: registry:5000/kubevirt/cirros-container-disk-demo:devel
+          image: dreamrocker/cirros-container-disk-demo:wip
         name: containerdisk
       - cloudInitNoCloud:
           userData: |
