--- a/cluster/examples/vm-template-fedora.yaml
+++ b/cluster/examples/vm-template-fedora.yaml
@@ -47,7 +47,7 @@ objects:
         terminationGracePeriodSeconds: 0
         volumes:
         - containerDisk:
-            image: registry:5000/kubevirt/fedora-cloud-container-disk-demo:devel
+            image: dreamrocker/fedora-cloud-container-disk-demo:wip
           name: containerdisk
         - cloudInitNoCloud:
             userData: |-
