--- a/cluster/examples/vmi-migratable.yaml
+++ b/cluster/examples/vmi-migratable.yaml
@@ -20,5 +20,5 @@ spec:
   terminationGracePeriodSeconds: 0
   volumes:
   - containerDisk:
-      image: registry:5000/kubevirt/alpine-container-disk-demo:devel
+      image: dreamrocker/alpine-container-disk-demo:wip
     name: containerdisk
